Prevent overlapping shadows

--- a/src/stylesheets/components/transcription/_toolbar.scss
+++ b/src/stylesheets/components/transcription/_toolbar.scss
@@ -7,6 +7,7 @@
 .esper-overlay {
   .toolbar {
     grid-column: 1 / -1;
+    background-color: $esper-bg;
     box-shadow: 0 1px 0 $esper-shadow;
     position: relative;
     z-index: 1;
